src/test/ConstantFail/ConstantFail.panda
constant x := 125
x := 65
Console.writeLine(x)